styles/styles.scss
@font-face {
  font-family: "Moon 2.0";
  src: url("/font/Moon2.0-Regular.otf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Moon 2.0";
  src: url("/font/Moon2.0-Bold.otf") format("truetype");
  font-weight: bold;
  font-style: normal;
}

$container-black: #1d2225;
$body-black: #101315;
$blue: #358CC3;
$white: #f4f2ff;
$grey: #696969;


html {
  min-height: 100%;
}


html {
  min-height: 100%;
}

body {
  background-color: $body-black;
  color: $white;
  font-family: "Moon 2.0";
  letter-spacing: 0.1875rem;
  padding: 0;
  margin: 0;
  display: flex;

  #myVideo {
    object-fit: cover;
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    filter: grayscale(80%) blur(2px);
    opacity: 0.15;
  }

  .container {
    background-color: $container-black;
    position: relative;
    left: 0;
    right: 0;
    border-radius: 5px;
    width: 600px;
    margin: 18px auto;
    text-align: center;
    z-index: 1;
      
      #switch__wrapper {
          text-align: right;
          margin: 20px;
          display: none;
      }
    
        /* The switch - the box around the slider */
        .switch {
          position: relative;
          display: inline-block;
          width: 60px;
          height: 34px;
    
          /* Hide default HTML checkbox */
          input {
            opacity: 0;
            width: 0;
            height: 0;
    
            &:checked + .slider {
              background-color: #101315;
            }
    
            &:focus + .slider {
              box-shadow: 0 0 1px #101315;
            }
    
            &:checked + .slider:before {
              -webkit-transform: translateX(26px);
              -ms-transform: translateX(26px);
              transform: translateX(26px);
            }
          }
          /* The slider */
          .slider {
            position: absolute;
            cursor: pointer;
            top: 0;
            left: 0;
            right: 0;
            bottom: 0;
            background-color: #ccc;
            -webkit-transition: 0.4s;
            transition: 0.4s;
    
            &:before {
              position: absolute;
              content: "";
              height: 26px;
              width: 26px;
              left: 4px;
              bottom: 4px;
              -webkit-transition: 0.4s;
              transition: 0.4s;
              background-repeat: no-repeat;
            }
    
            /* Rounded sliders */
            &.round {
              border-radius: 34px;
            }
    
            &.round:before {
              border-radius: 50%;
            }
          }
        }

        .content__wrapper {
          // padding: 0 50px 50px 50px;
          padding: 50px;
        }

        #pic {
          width: 150px;
          height: 150px;
          object-fit: cover;
          border-radius: 50%;
        }

        h1 {
          font-weight: bold;
          margin: 1.6rem 0 0.4375rem 0;
        }
    
        h2 {
          font-size: 17px;
          color: $blue;
          margin: 0;
        }

        h3 {
          color: $grey;
          text-align: left;
        }

        .socials {
          margin-top: 30px;
          display: flex;
          flex-direction: row;
          flex-wrap: wrap;
          justify-content: center;
    
          .social {
            text-decoration: none;
            display: flex;
            align-items: center;
            // flex-basis: 40%;
            margin: 0 12px;
            color: #f4f2ff;
    
            img {
              height: 32px;
            }

            span {
              margin-left: 10px;
            }
          }
        }

        #games__section {
          margin-top: 50px;
          .games {
            .game {
              height: 55px;
              margin: 15px 5px 0 0;
            }

            .text {
              height: 45px;
            }
          }
        }

        #skills__section {
          margin-top: 40px;
          text-align: left;

          .skills {
            display: flex;
            flex-direction: row;
            flex-wrap: wrap;
            justify-content: space-between;
            // height: 100px;

            .skill {
              display: flex;
              align-items: center;
              margin-top: 8px;
              // flex-grow: 1;

              img {
                width: 32px;
              }

              .logo-only {
                height: 30px;
                width: auto;
              }

              span {
                margin-left: 10px;
              }
            }
          }
        }
    }
}

@media (min-height: 927px) {
  body {
    align-items: center;
    height: 100%;
  }

  .container {
    margin: 0 auto !important;
  }
}


@media (max-width: 600px) {
  body {
    .container {
      margin: 0;
    }
    video {
      display: none;
    }
  }
}

@media (max-width: 400px) {
  body {
    .container {
      .content__wrapper {
        padding: 50px 30px;
      }
    }
  }
}

